--- a/ele/package.json
+++ b/ele/package.json
@@ -12,6 +12,7 @@
     "better-scroll": "^1.13.2",
     "core-js": "^3.16.3",
     "element-ui": "^2.15.5",
+    "v-viewer": "^1.6.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
